@startuml

title __ENTITIES's Class Diagram__\n

  namespace entities {
    class entities.Board {
        - map : Tile[][]
        + Board()
        + getTile()
        + removeCounterFromTile()
        + render()
        + setCounterOnTile()
        + tick()
        - setMap()
    }
  }
  

  namespace entities {
    abstract class entities.Entity {
        # height : int
        # width : int
        # x : float
        # y : float
        + Entity()
        + Entity()
        + getX()
        + getY()
        {abstract} + render()
        + setX()
        + setY()
        {abstract} + tick()
    }
  }
  

  namespace entities {
    class players.PositionOnMap {
        + arr : int
        + tile : int
        + PositionOnMap()
        + PositionOnMap()
        + PositionOnMap()
        + setTile()
    }
  }
  

  entities.Board -up-|> entities.Entity
  entities.Entity o-- ludogame.Handler : handler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
